--- a/trunk/Makefile.in
+++ b/trunk/Makefile.in
@@ -139,13 +139,13 @@ AUX_DIST_EXTRA = \
                   $(ac_aux_dir)/acx_lapack.m4 \
                   $(ac_aux_dir)/acx_mpi.m4 \
                   $(ac_aux_dir)/acx_pthread.m4 \
-                  $(ac_aux_dir)/acx_sprng.m4 \
                   $(ac_aux_dir)/acx_hdf5.m4 \
                   $(ac_aux_dir)/acx_restrict.m4
 
 EXTRA_DIST = bootstrap
 
-MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure stamp.h.in $(AUX_DIST)
+#MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure stamp.h.in $(AUX_DIST)
+MAINTAINERCLEANFILES = Makefile.in configure stamp.h.in $(AUX_DIST)
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/config/mkinstalldirs
