--- a/trunk/src/Makefile.am
+++ b/trunk/src/Makefile.am
@@ -1,7 +1,7 @@
 pkginclude_HEADERS= \
 	ohmms-config.h 
 
-OHMMS_UTILITIES = \
+QMCPP_UTILITIES = \
 	Utilities/OhmmsObject.cpp \
 	Utilities/OhmmsInform.cpp \
 	Utilities/OhmmsInfo.cpp \
@@ -9,23 +9,27 @@ OHMMS_UTILITIES = \
 	Utilities/SpeciesSet.cpp \
 	Utilities/RandRandom.cpp \
 	Utilities/RandomGenerator.cpp \
+	OhmmsData/Libxml2Doc.cpp \
 	OhmmsApp/ProjectData.cpp \
         OhmmsApp/RandomNumberControl.cpp \
         Platforms/sysutil.cpp\
 	Numerics/OhmmsBlas.cpp
 
    
-OHMMS_MESSAGE = \
+QMCPP_MESSAGE = \
 	Message/Communicate.cpp 
 
-OHMMS_PARTICLE = \
+QMCPP_PARTICLE = \
 	ParticleTags.cpp \
         Lattice/Uniform3DGridLayout.cpp \
         Particle/ParticleSet.BC.cpp \
 	Particle/ParticleSet.cpp \
 	Particle/MCWalkerConfiguration.cpp \
         Particle/DistanceTable.cpp \
-        Particle/HDFWalkerIO.cpp \
+        Particle/HDFWalkerInput0.cpp \
+        Particle/HDFWalkerInputCollect.cpp \
+        Particle/HDFWalkerInputManager.cpp \
+        Particle/HDFWalkerOutput.cpp \
         ParticleIO/XMLParticleIO.cpp \
         ParticleIO/ParticleLayoutIO.cpp \
         ParticleIO/HDFParticleIO.cpp \
@@ -37,13 +41,21 @@ QMC_BASE = \
 	QMCWaveFunctions/JastrowBuilder.cpp\
 	QMCWaveFunctions/TrialWaveFunction.cpp
 
+#add mpi-related sources and oompi directory for --enable-mpi=yes
+if NEEDTOBUILDOOMPI
+oompi=OOMPI
+OOMPI_INC =  -I$(top_srcdir)/src/OOMPI
+endif
+
+INCLUDES = $(OOMPI_INC)
+
 # build the base library used by any application
 lib_LIBRARIES = libqmcbase.a
 
 libqmcbase_a_SOURCES = \
-	$(OHMMS_UTILITIES) \
-	$(OHMMS_MESSAGE) \
-	$(OHMMS_PARTICLE) \
+	$(QMCPP_UTILITIES) \
+	$(QMCPP_MESSAGE) \
+	$(QMCPP_PARTICLE) \
 	$(QMC_BASE)
 
 #important: build order,
@@ -51,4 +63,4 @@ libqmcbase_a_SOURCES = \
 # ii) application-dependent libraries: FortranLib, OOMPI, SlaterKosterTB
 #iii) the main application: OhmmsApp
 # iv) ready to install the header files and libraries
-SUBDIRS = .  QMCApp
+SUBDIRS = .  $(oompi) QMCApp
