--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -4,9 +4,12 @@
 #   AC_MSG_ERRORS (and probably other things) will not except commas!!!
 #     Bad things will happen!!!
 
-AC_PREREQ(2.13)
+AC_PREREQ(2.57)
 AC_INIT(qmcplusplus,0.4.0)
 AC_CONFIG_AUX_DIR([config])
+
+AC_DEFINE([QMCPLUSPLUS_RELEASE], 1, [This is a public relase.])
+
 #AC_CONFIG_SRCDIR([src/ohmms-config.h])
 
 AM_INIT_AUTOMAKE([qmcplusplus], [0.0.0])
@@ -63,9 +66,7 @@ sinclude(config/ac_check_package.m4)
 sinclude(config/acx_mpi.m4)
 sinclude(config/acx_blas.m4)
 sinclude(config/acx_lapack.m4)
-sinclude(config/acx_sprng.m4)
 sinclude(config/acx_hdf5.m4)
-sinclude(config/acx_blitz.m4)
 sinclude(config/acx_boost.m4)
 sinclude(config/acx_restrict.m4)
 sinclude(config/ac_cxx_bz_compiler.m4)
@@ -183,7 +184,7 @@ AC_ARG_WITH(cxx,
        echo "Configuring for gcc (wahoo!)"
        bz_compiler=gcc
        AC_BZ_SET_COMPILER($withval,"g++","-ftemplate-depth-60 -DADD_")
-       CXX_OPTIMIZE_FLAGS="-O3 -funroll-loops -fstrict-aliasing -ffast-math -finline-limit=1000 -fno-gcse"
+       CXX_OPTIMIZE_FLAGS="-O3 -funroll-loops -fstrict-aliasing -ffast-math -finline-limit=1000 -fno-gcse -Wno-deprecated"
        CXX_DEBUG_FLAGS="-g -DPRINT_DEBUG"
      ;;
      aCC)                # HP-UX compiler http://www.hp.com/go/c++
@@ -271,7 +272,7 @@ AC_ARG_WITH(cxx,
        CXX_DEBUG_FLAGS="-g -DPRINT_DEBUG"
      ;;
      *)
-        AC_MSG_WARN([--with-cxx: invalid option $withval])
+        AC_MSG_ERROR([--with-cxx: invalid option $withval])
      ;;
    esac
    know_compiler=1 ])
@@ -499,8 +500,8 @@ AC_ARG_WITH(mkl,
   [])
 
 if test $found_blas_lapack -eq 0; then
-  ACX_BLAS([], [AC_MSG_WARN([Could not find blas. Add it manually.])])
-  ACX_LAPACK([], [AC_MSG_WARN([Could not find lapack. Add it manually])])
+  ACX_BLAS([], [AC_MSG_ERROR([Could not find blas. Add it manually.])])
+  ACX_LAPACK([], [AC_MSG_ERROR([Could not find lapack. Add it manually])])
 fi
 
 
@@ -586,26 +587,28 @@ AC_ARG_ENABLE(openmp,
 
 # Check if the script was called with --enable-optimize 
 #
-AC_ARG_ENABLE(optimize,
-  AC_HELP_STRING([--enable-optimize],[enable compiler optimization flags (default=yes)]),
-  [
-  if test x$enableval != no; then
-        echo "Optimization flags enabled"
-	CXXFLAGS="$CXXFLAGS $CXX_OPTIMIZE_FLAGS"
-        FFLAGS="$F77_OPTIMIZE_FLAGS $FFLAGS"
-  fi
-  ],			    
-  [])
+#AC_ARG_ENABLE(optimize,
+#  AC_HELP_STRING([--enable-optimize],[enable compiler optimization flags (default=yes)]),
+#  [
+#  if test x$enableval != xno; then
+#        echo "Optimization flags enabled"
+#	CXXFLAGS="$CXXFLAGS $CXX_OPTIMIZE_FLAGS"
+#        FFLAGS="$F77_OPTIMIZE_FLAGS $FFLAGS"
+#  fi
+#  ],			    
+#  [])
+## --enable-debug, and if so modify the compilation flags.
+#AC_ARG_ENABLE(debug,
+#  AC_HELP_STRING([--enable-debug],[enable compiler debug flags (default=no)]),
+#  [if test x"$enableval" = xyes; then
+#     echo "Debugging flags enabled"
+#     CXXFLAGS="$CXXFLAGS $CXX_DEBUG_FLAGS"
+#     FFLAGS="$F77_DEBUG_FLAGS $FFLAGS"
+#   fi], 
+#  [])
 
-# --enable-debug, and if so modify the compilation flags.
-AC_ARG_ENABLE(debug,
-  AC_HELP_STRING([--enable-debug],[enable compiler debug flags (default=no)]),
-  [if test x"$enableval" = xyes; then
-     echo "Debugging flags enabled"
-     CXXFLAGS="$CXXFLAGS $CXX_DEBUG_FLAGS"
-     FFLAGS="$F77_DEBUG_FLAGS $FFLAGS"
-   fi], 
-  [])
+CXXFLAGS="$CXXFLAGS $CXX_OPTIMIZE_FLAGS"
+FFLAGS="$F77_OPTIMIZE_FLAGS $FFLAGS"
 
 #add fortran-related libraries to CXXFLAGS
 CXXFLAGS="$CXXFLAGS $CXXFFLAGS"
@@ -669,20 +672,20 @@ AC_ARG_WITH(precision,
               [Define double-precision double for the real type.])
   ])
 
-AC_ARG_WITH(app,
-  AC_HELP_STRING([--with-app=MolecuApps|QDApps],
-                 [Define the main application (default MolecuApps).]),
-  [
-    if test x"$withval" = x"QDApps"; then
-      qmcapp=$withval
-    fi
-  ],
-  [ 
-    AC_MSG_WARN([Using MolecuApps.])
-  ])
-
-AM_CONDITIONAL(USE_QDAPPS,  test "$qmcapp" = "QDApps")
-AM_CONDITIONAL(USE_MOLECUAPPS, test "$qmcapp" = "MolecuApps")
+#AC_ARG_WITH(app,
+#  AC_HELP_STRING([--with-app=MolecuApps|QDApps],
+#                 [Define the main application (default MolecuApps).]),
+#  [
+#    if test x"$withval" = x"QDApps"; then
+#      qmcapp=$withval
+#    fi
+#  ],
+#  [ 
+#    AC_MSG_WARN([Using MolecuApps.])
+#  ])
+#
+#AM_CONDITIONAL(USE_QDAPPS,  test "$qmcapp" = "QDApps")
+#AM_CONDITIONAL(USE_MOLECUAPPS, test "$qmcapp" = "MolecuApps")
 
 #
 #check libxml2, if the package is not found, die
@@ -700,11 +703,70 @@ CXXFLAGS="$CXXFLAGS $XML2_CFLAGS"
 ACX_HDF5([], [AC_MSG_WARN([Could not find hdf5. Disabled.])])
 
 #use config/acx_sprng.m4 file
-ACX_SPRNG([], [AC_MSG_WARN([Could not find sprng. Disabled.])])
+#ACX_SPRNG([], [AC_MSG_WARN([Could not find sprng. Disabled.])])
 
-ACX_BLITZ([], [AC_MSG_WARN([Could not find blitz. Disabled.])])
+#ACX_BLITZ([], [AC_MSG_WARN([Could not find blitz. Disabled.])])
 
 ACX_BOOST([], [AC_MSG_WARN([Could not find boost. Disabled.])])
+
+
+#time to add mpi stuff only for --enable-mpi=yes
+needtobuild_oompi=false
+
+if test "$enable_mpi" != "no"; then
+   echo "MPI compilation is requested. Checking mpi stuff...."
+   ACX_MPI(
+   [
+     echo "Checking MPICXX=$MPICXX"
+     if test x"$MPICXX" != x ; then
+       if test "$MPICXX" = "cmpicc";then
+         if test "$CXX" = "icc"; then
+           echo "cmpicc requires an extra option when compiled with intel compilers"
+           CXXFLAGS="$CXXFLAGS -icc"
+         fi
+       fi
+       CXX="$MPICXX"
+     fi
+    AC_DEFINE([HAVE_MPI], 1, [Define to 1 if you have MPI library])
+    AC_DEFINE([HAVE_OOMPI], 1, [Define to 1 if you have OOMPI library])
+    needtobuild_oompi=true
+    AC_OUTPUT_COMMANDS([
+         outfile=src/oompi-config.h
+         tmpfile=${outfile}
+         dirname="sed s,^.*/,,g"
+         echo creating $outfile
+         cat > $tmpfile << _EOF_
+// -*- c++ -*-
+//
+// OOMPI Class library
+// Configuration header.  Automatically generated.
+//
+// See the LICENSE file in the top-level directory for copyright notices.
+//
+
+#ifndef _OOMPI_CONFIG_H_
+#define _OOMPI_CONFIG_H_
+
+#include <stdlib.h>
+#include <sys/types.h>
+nclude "ohmms-config.h"
+
+#if SIZEOF_INT != SIZEOF_BOOL
+#define OOMPI_BOOL_NE_INT 1
+#else
+#define OOMPI_BOOL_NE_INT 0
+#endif
+
+#endif // _OOMPI_CONFIG_H_
+_EOF_
+  ],
+  [])
+  ],
+  [
+  ])
+fi
+
+AM_CONDITIONAL(NEEDTOBUILDOOMPI,test "$needtobuild_oompi" = "true")
 
 LIBS="$XML2_LIBS $HDF5_LIBS $LAPACK_LIBS $BLAS_LIBS $SPRNG_LIBS $FLIBS $LIBS"
 
@@ -715,4 +777,5 @@ AC_SUBST(QMCBASE_LIBS)
 AC_OUTPUT([Makefile
    	   src/Makefile
 	   src/QMCApp/Makefile
+           src/OOMPI/Makefile
 ])
