--- a/trunk/src/OOMPI/Makefile.in
+++ b/trunk/src/OOMPI/Makefile.in
@@ -89,7 +89,6 @@ BLAS_LIBS = @BLAS_LIBS@
 CC = @CC@
 CPP = @CPP@
 CXX = @CXX@
-CXXCPP = @CXXCPP@
 CXXFFLAGS = @CXXFFLAGS@
 CXXFLAGS = @CXXFLAGS@
 CXX_DEBUG_FLAGS = @CXX_DEBUG_FLAGS@
@@ -98,15 +97,12 @@ CXX_OPTIMIZE_FLAGS = @CXX_OPTIMIZE_FLAGS@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
 ECHO = @ECHO@
-EGREP = @EGREP@
 F77 = @F77@
 F77_OPTIMIZE_FLAGS = @F77_OPTIMIZE_FLAGS@
 F90 = @F90@
 F90_OPTIMIZE_FLAGS = @F90_OPTIMIZE_FLAGS@
 FFLAGS = @FFLAGS@
 FLIBS = @FLIBS@
-GCJ = @GCJ@
-GCJFLAGS = @GCJFLAGS@
 HDF5_LIBS = @HDF5_LIBS@
 INCLUDES = @INCLUDES@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
@@ -114,20 +110,15 @@ LAPACK_LIBS = @LAPACK_LIBS@
 LDFLAGS = @LDFLAGS@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
-MCF_LIBS = @MCF_LIBS@
-METIS_LIBS = @METIS_LIBS@
 MKL_LIBS = @MKL_LIBS@
 MPICC = @MPICC@
 MPICXX = @MPICXX@
 MPIF77 = @MPIF77@
 MPILIBS = @MPILIBS@
 OBJDUMP = @OBJDUMP@
-OHMMSAPP = @OHMMSAPP@
-OHMMSAPP_LIBS = @OHMMSAPP_LIBS@
-OHMMSBASE_LIBS = @OHMMSBASE_LIBS@
 PACKAGE = @PACKAGE@
+QMCBASE_LIBS = @QMCBASE_LIBS@
 RANLIB = @RANLIB@
-RC = @RC@
 SPRNG_LIBS = @SPRNG_LIBS@
 STRIP = @STRIP@
 UP = @UP@
