Fink link problem on SGI Altix.
git-svn-id: http://qmcpack.googlecode.com/svn@803 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -87,6 +87,9 @@ INCLUDE(${PROJECT_CMAKE}/FindBoost.cmake)
 
 IF(QMC_MPI)
   INCLUDE(${PROJECT_SOURCE_DIR}/CMake/addMPI.cmake)
+  IF(FOUND_MPI)
+    LINK_LIBRARIES(${MPI_LIBRARY})
+  ENDIF(FOUND_MPI)
 ENDIF(QMC_MPI)
 
 IF(FOUND_LIBXML2)
