*** empty log message ***
git-svn-id: http://qmcpack.googlecode.com/svn@831 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -5,6 +5,10 @@ PROJECT(newqmc)
 ####################################
 SET(WFSRCS
   ../QMCWaveFunctions/OrbitalBuilderBase.cpp
+  ../QMCWaveFunctions/JAABuilder.cpp
+  ../QMCWaveFunctions/NJAABuilder.cpp
+  ../QMCWaveFunctions/JABBuilder.cpp
+  ../QMCWaveFunctions/NJABBuilder.cpp
   ../QMCWaveFunctions/AtomicOrbitals/HFAtomicSTOSet.cpp 
   ../QMCWaveFunctions/AtomicOrbitals/HFAtomicSTOSetBuilder.cpp 
   ../QMCWaveFunctions/AtomicOrbitals/HeSTOClementiRottie.cpp
