--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -16,6 +16,7 @@ SET(UTILITIES
   OhmmsApp/RandomNumberControl.cpp
   Numerics/OhmmsBlas.cpp
   Platforms/sysutil.cpp
+  QMCFactory/OneDimGridFactory.cpp
 )
 
 SET(PARTICLE
