Add QMCPLUSPLUS_LINEARSCALE for the development version.
git-svn-id: http://qmcpack.googlecode.com/svn@842 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/ohmms-config.h.cmake.in
+++ b/trunk/src/ohmms-config.h.cmake.in
@@ -20,6 +20,9 @@
 /* define the release version */
 #cmakedefine QMCPLUSPLUS_RELEASE  @QMCPLUSPLUS_RELEASE@
 
+/* define the linearscale version */
+#cmakedefine QMCPLUSPLUS_LINEARSCALE  @QMCPLUSPLUS_LINEARSCALE@
+
 /* Enable OpenMP parallelization. */
 #cmakedefine ENABLE_OPENMP @ENABLE_OPENMP@
 
